--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -4,9 +4,9 @@
     {{ template "_internal/google_analytics.html" . }}
     {{ block "title" . }}
       <title>
-        {{ if .IsHome }}{{ $.Site.Title }}{{ with $.Site.Params.Subtitle }} —
+        {{ if .IsHome }}{{ $.Site.Title }}{{ with $.Site.Params.Subtitle }}
         {{ . }}{{ end }}{{ else }}{{ .Title }} ::
-        {{ $.Site.Title }}{{ with $.Site.Params.Subtitle }} — {{ . }}{{ end }}{{ end }}
+        {{ $.Site.Title }}{{ with $.Site.Params.Subtitle }} {{ . }}{{ end }}{{ end }}
       </title>
     {{ end }}
     {{ partial "head.html" . }}
